[package]
name = "xmu-login"
description = "An SDK used for bypassing XMU authentication system"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Hell-Tractor/xmu-login"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
anyhow = "1.0"
base64 = "0.21.0"
cbc = { version = "0.1.2", features = ["std"] }
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
